--- a/prova-web2.css
+++ b/prova-web2.css
@@ -19,28 +19,28 @@ justify-content: space-evenly;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(248, 5, 5);
 }
 .logo-1 {
-    color: rgb(250, 250, 250);
+    color: rgb(248, 5, 5);
 
 
 }
 
 .section-1 {
-    background-color: #ef6771;
+    background-color: #efae54;
     padding: 180px;
-    background-image: url(banheiro\ 1.jpg);
-   
+    background-image: url(111.jpg);
+    background-position: 60% 45%;
+    -webkit-background-size: cover;
 }
-
 
 
 .div-h {
     font-size: 60px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
-  color: blue;
+  color: rgb(248, 5, 5);
  
   
   
@@ -49,7 +49,7 @@ justify-content: space-evenly;
 
 .div-1p {
     padding: 35px;
-    color:  blue;
+    color:  rgb(248, 5, 5);
     font-size: 25px;
     font-weight: 600;
     
@@ -58,10 +58,10 @@ justify-content: space-evenly;
 }
 
 .button-1 {
-    background-color:  #3f3fff;
+    background-color: 248, 5, 5;
     padding: 10px 40px;
     border-radius: 7px;
-    color: #ffffff;
+    color: #000000;
     font-weight: 600;   
     font-family: Arial, Helvetica, sans-serif; 
      
@@ -75,7 +75,7 @@ justify-content: space-evenly;
     justify-content: center;
     align-items: center;
    gap: 10px;
-   color: rgb(0, 46, 250);
+   color: rgb(248, 5, 5);
    font-weight: 600;
    text-align: right;
    
@@ -86,7 +86,8 @@ justify-content: space-evenly;
  background-color: #efae54;
     padding: 180px;
     background-image: url(sofa\ 2.jpg);
-
+    background-position: 60% 45%;
+    -webkit-background-size: cover;
    
    
 }
@@ -96,14 +97,14 @@ justify-content: space-evenly;
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    color:  rgb(241, 8, 8);
+    color:  rgb(248, 5, 5);
     font-weight: 600;
 
 }
 
 .div-2p {
     padding: 35px;
-    color:  rgb(241, 8, 8);
+    color:  rgb(248, 5, 5);
     font-size: 25px;
     font-weight: 600;
     
@@ -113,11 +114,12 @@ justify-content: space-evenly;
 
 
 .button-2 {
-    background-color:  #000000;
+    background-color:  #fffcfc;
     padding: 10px 40px;
     border-radius: 7px;
-    color: #ffffff;
-    font-weight: 600;    
+    color: #000000;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;    
 }
 .img-header {
     background-size: auto;
